--- a/w0_syllabus.qmd
+++ b/w0_syllabus.qmd
@@ -13,7 +13,7 @@ title: 课程安排与考核要求
 
 ## 教学周次安排
 
-### **W1｜Python 基础 + 回归问题入门**
+### **W10｜Python 基础 + 回归问题入门**
 
 **理论部分**
 
@@ -27,7 +27,7 @@ title: 课程安排与考核要求
 * Python 速成：变量、列表、函数调用
 * 运行第一个机器学习程序（线性回归）
 
-### **W2｜数据处理与线性回归实践**
+### **W11｜数据处理与线性回归实践**
 
 **理论部分**
 
@@ -41,7 +41,7 @@ title: 课程安排与考核要求
 * 线性回归模型训练与评估
 * 残差分析
 
-### **W3｜线性回归的正则化：Ridge, Lasso 与 Elastic Net**
+### **W12｜线性回归的正则化：Ridge, Lasso 与 Elastic Net**
 
 **理论部分**
 
@@ -56,9 +56,9 @@ title: 课程安排与考核要求
 * 正则化路径图、残差图可视化
 * 特征重要性分析（Lasso 稀疏性）
 
-**W3 项目立项验收**（第四讲前提交）
+**W12 项目立项验收**（第四讲前提交）
 
-### **W4｜分类问题、决策树与评估指标**
+### **W13｜分类问题、决策树与评估指标**
 
 **理论部分**
 
@@ -74,7 +74,7 @@ title: 课程安排与考核要求
 * 评估可视化：混淆矩阵、ROC 曲线、AUC 计算
 * 分类阈值调整观察精确率/召回率变化
 
-### **W5｜集成学习：随机森林与 GBDT**
+### **W14｜集成学习：随机森林与 GBDT**
 
 **理论部分**
 
@@ -88,7 +88,7 @@ title: 课程安排与考核要求
 * GBDT：LightGBM 实现 + 超参数调整
 * 三模型对比：AUC、训练时间
 
-### **W6｜神经网络基础**
+### **W15｜神经网络基础**
 
 **理论部分**
 
@@ -104,7 +104,7 @@ title: 课程安排与考核要求
 * 第一个 MLP（Titanic）：数据预处理（归一化、one-hot）
 * 训练可视化：loss/accuracy 曲线 + 测试集 AUC
 
-### **W7｜项目答辩**
+### **W16｜项目答辩**
 
 **答辩形式**
 
@@ -124,7 +124,7 @@ title: 课程安排与考核要求
 ### **必修课总分构成**（50 分制）
 | 项目 | 权重 | 说明 |
 |------|------|------|
-| 机器学习项目 | 20分 | W3立项+ W7 项目答辩 |
+| 机器学习项目 | 20分 | W12立项+ W16 项目答辩 |
 | 期末考试 | 25分 | 选择 + 判断 + 论述 + 案例分析（涵盖 W1-W6 理论知识） |
 | 课堂参与 | 5分 | 出勤（随机点名） |
 | **合计** | **50分** | |
@@ -132,8 +132,8 @@ title: 课程安排与考核要求
 ### **选修课总分构成**（50 分制）
 | 项目 | 权重 | 说明 |
 |------|------|------|
-| 机器学习项目 | 30分 | W3立项 + W7 项目答辩 |
-| 课堂Quiz | 15分 | 三次课堂小测（在W3、W5与W7上课时进行） |
+| 机器学习项目 | 30分 | W12立项 + W16 项目答辩 |
+| 课堂Quiz | 15分 | 三次课堂小测（在W12、W14与W16上课时进行） |
 | 课堂参与 | 5分 | 出勤（随机点名） |
 | **合计** | **50分** | |
 
@@ -159,13 +159,13 @@ title: 课程安排与考核要求
 
 ## 项目最低交付标准
 
-### **W3 验收**（第四周上课前提交到学习通/GitHub）
+### **W12 验收**（即W13上课前提交到学习通/GitHub）
 * [ ] 项目仓库建立（包含相关文件夹）
 * [ ] README 包含题目、数据来源、成员分工
 * [ ] 能在 Python程序脚本/Jupyter Notebook 中加载数据并展示基本统计信息
 * [ ] 至少一张数据可视化图
 
-### **W7 验收**（答辩时）
+### **W16 验收**（答辩时）
 * [ ] **代码能运行**：按照 README 步骤能复现结果
 * [ ] **结果齐全**：
   * 至少对比 2 种模型
