--- a/w0_syllabus.qmd
+++ b/w0_syllabus.qmd
@@ -56,7 +56,7 @@ title: 课程安排与考核要求
 * 正则化路径图、残差图可视化
 * 特征重要性分析（Lasso 稀疏性）
 
-**W12 项目立项验收**（第四讲前提交）
+**W12 项目立项验收**（W13上课前提交）
 
 ### **W13｜分类问题、决策树与评估指标**
 
@@ -109,7 +109,7 @@ title: 课程安排与考核要求
 **答辩形式**
 
 * 每组 8 分钟展示 + 4 分钟提问
-* 提交：6–8 页报告 + 答辩 PDF + 项目仓库（详见教学资源）
+* 提交：6–8 页报告 + 答辩 PPT/PDF + 项目仓库（详见教学资源）
 
 **验收标准**
 
