--- a/w1_practice.qmd
+++ b/w1_practice.qmd
@@ -26,291 +26,222 @@ plt.rcParams['axes.unicode_minus'] = False
 
 本上机讲义覆盖以下内容：
 
-- 环境安装：Python、Jupyter、VS Code插件
-- 安装验证：Python、Jupyter
-- Python 基础：变量、列表、导入与函数调用
+- 环境安装：Python、VS Code、必要的库
+- 安装验证：Python、库文件
 - 第一个机器学习程序：线性回归的简化体验
 
 ## 环境安装详细指南
 
-### Python 安装
+### Step 1: Python 官方安装
 
-**推荐方式1：Python 官方安装包**
+**推荐方式：使用 Python 官方安装包（简单可靠）**
 
-- 下载地址：https://www.python.org/downloads
-- 选择最新稳定版本（建议 3.10）
-- 安装时务必勾选 "Add Python to PATH"
-- 验证安装：终端运行 `python --version`
+1. **下载地址**：https://www.python.org/downloads
+2. **选择版本**：建议选择最新稳定版本（3.11 或 3.12）
+3. **安装步骤**：
+   - 下载适合你操作系统的安装程序
+   - 运行安装程序，**务必勾选 "Add Python to PATH"** ⚠️（这很重要！）
+   - 点击 "Install Now" 或选择自定义安装即可
+4. **验证安装**：打开终端/命令行，运行以下命令：
+   ```bash
+   python --version
+   ```
+   如果显示版本号（如 Python 3.11.x），说明安装成功！
 
-**推荐方式2：Anaconda/Miniconda**
+**为什么不推荐 Anaconda？**
 
-- 下载地址：https://www.anaconda.com/download
-- 优点：预装常用科学计算库，环境管理方便
-- 安装步骤：
-  1. 下载对应操作系统的安装包
-  2. 运行安装程序，选择"为所有用户安装"或"仅为我安装"
-  3. 添加 Anaconda 到系统 PATH（安装时勾选）
-  4. 验证安装：打开终端运行 `python --version`
+- 虽然 Anaconda 预装了许多库，看似方便，但对初学者而言反而会带来复杂性：
+  - 占用空间大（超过1GB）
+  - 环境管理复杂，容易出现包版本冲突
+  - 容易让学生"吃苦头"——问题难以调试
+- 官方 Python + pip 的组合简洁、稳定、可靠
 
-### Jupyter 安装（可先跳过）
+### Step 2: 安装 VS Code（推荐的代码编辑器）
 
-**方式1：通过 pip 安装**
+1. **下载地址**：https://code.visualstudio.com/
+2. **安装步骤**：
+   - 下载适合你操作系统的安装程序
+   - 运行安装程序，按照提示完成安装
+   - 启动 VS Code
+3. **特别优惠 - GitHub Student 账户**：
+   - **免费用户**：GitHub Copilot 有月度限制（免费版本问答次数有限制）
+   - **Student 账户**：获得 **GitHub Copilot Pro 免费使用权**（价值 $10/月）
+     - 无限制使用 Copilot（AI 代码助手）
+     - 比免费用户多得多的问答次数和优先级
+   - **申请方式**：访问 https://education.github.com/pack，用学生邮箱注册即可
+   - **还包含其他开发工具的优惠**：例如云服务、设计工具等
 
-```bash
-pip install jupyter
-```
+### Step 3: VS Code 插件安装
 
-**方式2：通过 conda 安装（如果使用 Anaconda）**
-
-```bash
-conda install jupyter
-```
-
-**启动 Jupyter**
-
-- Jupyter Notebook：终端运行 `jupyter notebook`
-- JupyterLab：终端运行 `jupyter lab`
-- 默认在浏览器中打开 http://localhost:8888
-
-### VS Code 插件安装指南
-
-如果使用 VS Code 进行编程，请安装以下必备插件：
-
-1. **Python** (Microsoft官方插件)
-   - 搜索并安装：`ms-python.python`
-   - 提供 Python 语言支持、调试、代码格式化等功能
-
-2. **Jupyter**（可先跳过）
-   - 搜索并安装：`ms-toolsai.jupyter`
-   - 支持在 VS Code 中运行 .ipynb 文件
-
-3. **Pylance**
-   - 搜索并安装：`ms-python.pylance`
-   - 提供更好的 Python 语言服务器，支持类型检查和智能提示
+VS Code 最强大的地方就是可以通过插件扩展功能。打开 VS Code 后，按照以下步骤安装必备插件：
 
 **安装步骤：**
 
 1. 打开 VS Code
-2. 按 `Ctrl+Shift+P` (Windows/Linux) 或 `Cmd+Shift+P` (Mac) 打开命令面板
-3. 输入 `Extensions: Install Extensions`
-4. 搜索上述插件名称并安装
+2. 按 `Ctrl+Shift+X` (Windows/Linux) 或 `Cmd+Shift+X` (Mac) 打开插件市场
+3. 搜索以下插件名称并安装：
 
-按顺序运行每个单元格，遇到错误先读提示再求助助教。
+**必备插件：**
 
-```{python}
-#| message: false
-#| warning: false
-# 验证 Python 与 Jupyter
-import sys, subprocess
-print('Python 版本:', sys.version)
+1. **Python**（Microsoft 官方）
+   - 搜索关键词：`Python` 或 `ms-python.python`
+   - 功能：Python 代码支持、调试、代码格式化
 
-# 安装常用库
+2. **Pylance**（更好的语言服务）
+   - 搜索关键词：`Pylance` 或 `ms-python.pylance`
+   - 功能：类型检查、智能代码完成、错误提示
 
-# 方式1: 如果你用"官网方式"（pip）安装Python，可用如下命令安装常用库(终端/Anaconda Prompt 打开后运行)：
-# pip install numpy pandas matplotlib scikit-learn
+3. **GitHub Copilot**（AI 代码助手 - 强烈推荐！）
+   - 搜索关键词：`Copilot` 或 `GitHub.copilot`
+   - 功能：使用 AI 帮助写代码、生成代码建议
+   - **免费使用**：如果你有 GitHub Student 账户（Student 账户免费享用 $10/月 的 Copilot Pro）
 
-# 方式2: 如果你用Anaconda (conda) 安装Python，可用如下conda命令安装常用库：
-# conda install numpy pandas matplotlib scikit-learn
+### Step 4: 库和包管理 - pip 与 uv
 
-# 方式3: 推荐现代方法 —— 使用 uv 管理包（更快、更安全！）
-# 1. 用pip安装uv（只需一次）：
-# pip install uv
+**什么是 pip？**
 
-# 2. 之后用uv代替pip安装常用库，命令和pip几乎完全一样，但速度更快、依赖解析更准确：
-# uv pip install numpy pandas matplotlib scikit-learn
+- `pip` 是 Python 的包管理工具，用于安装和管理第三方库
+- 库（Library）就像是一个"工具箱"，里面装满了别人已经写好的实用工具
 
-# 3. 对于零基础同学，使用 uv 安装包有几个优势：
-# - 管理库更方便：只需一个命令即可一次性安装或更新多个库，不必手动一个个装。
-# - 出错更少：uv 会自动帮你处理库之间的兼容关系，减少出现"库版本冲突"的问题。
-# - 安装速度快：uv 下载和安装包通常比 pip 更快，能节省等待时间。
-# - 后续维护简单：你还可以用 uv 快速导出/导入全部依赖，方便以后迁移或在新环境复现。
-# 总结：uv 就像"自动帮你打理图书馆的管家"，让我们不用担心安装库的细节，把注意力集中在代码和实验本身，非常适合初学者用来管理项目依赖。
+**本课程需要的库：**
 
-# 验证常用库是否可导入（若失败不报错，仅提示）
-libs = ['numpy', 'pandas', 'matplotlib', 'sklearn']
-for lib in libs:
-    try:
-        __import__(lib)
-        print(f'{lib} 导入成功')
-    except Exception as e:
-        print(f'{lib} 导入失败：{e}\n可用 pip 安装：pip install {lib}')
-```
+| 库名 | 用途 |
+|------|------|
+| `numpy` | 数值计算（数组、矩阵运算） |
+| `pandas` | 数据处理（表格数据操作） |
+| `matplotlib` | 数据可视化（画图） |
+| `scikit-learn` | 机器学习模型 |
 
-### 如果库导入失败，如何安装？
+**安装这些库（推荐三种方式之一）：**
 
-**方式1：使用 pip 安装（如果使用官网 Python 安装包）**
+**方式 1：基础方式 - 使用 pip**
 
 ```bash
 pip install numpy pandas matplotlib scikit-learn
 ```
 
-**方式2：使用 conda 安装（如果使用 Anaconda）**
+**方式 2：现代方式 - 使用 uv（推荐！）**
 
+`uv` 是一个更快、更安全的 Python 包管理工具，专为初学者和团队项目设计。
+
+首先安装 `uv`：
 ```bash
-conda install numpy pandas matplotlib scikit-learn
+pip install uv
 ```
 
-**方式3：使用国内镜像源（如果下载速度慢）**
+然后用 `uv` 安装其他库：
+```bash
+uv pip install numpy pandas matplotlib scikit-learn
+```
 
+**uv 的优势：**
+
+| 特性 | pip | uv |
+|------|-----|-----|
+| 安装速度 | 较慢 | ⚡ 快 10-100 倍 |
+| 依赖解析 | 有时出现版本冲突 | ✓ 更准确，冲突更少 |
+| 一键安装多个库 | ✓ 可以 | ✓ 可以，更快 |
+| 导出依赖 | 较复杂 | ✓ 一行命令 |
+| 初学者友好度 | 一般 | ✓ 更友好 |
+
+简单来说：**`uv` 就像是"自动帮你打理图书馆的管家"**，让你不用担心安装库的细节，把注意力集中在代码和实验本身。
+
+### Step 5: pip install 常见问题排查
+
+如果你运行 `pip install` 或 `uv pip install` 时出现错误，通常是以下原因。按顺序尝试：
+
+**错误现象 1：`pip: command not found` 或 `'pip' 不是内部或外部命令`**
+
+这表示系统找不到 Python 或 pip 的位置。按以下步骤解决：
+
+**第1步：重启计算机**
+- 重启可以使系统重新加载 PATH 环境变量
+- 重启后重新打开终端，尝试 `pip --version`
+
+**第2步：如果还是失败，手动添加 Python 到 PATH**
+
+**Windows：**
+1. 打开 "文件资源管理器" → 右键单击 "此电脑" → "属性"
+2. 点击 "高级系统设置"
+3. 点击 "环境变量"
+4. 在 "用户变量" 或 "系统变量" 中，找到 "Path"，点击 "编辑"
+5. 点击 "新建"，添加 Python 安装路径（通常是 `C:\Users\你的用户名\AppData\Local\Programs\Python\Python311` 或类似路径）
+6. 点击 "确定" 保存，重启终端
+
+**Mac/Linux：**
+1. 打开终端
+2. 编辑 `~/.zshrc` 或 `~/.bashrc`：
+   ```bash
+   nano ~/.zshrc
+   ```
+3. 在文件末尾添加：
+   ```bash
+   export PATH="/usr/local/bin:$PATH"
+   ```
+4. 按 `Ctrl+X`，然后 `Y`，再按 `Enter` 保存
+5. 运行 `source ~/.zshrc` 加载配置
+
+**第3步：如果以上都不行，重装 Python**
+1. 卸载已安装的 Python
+2. 从 https://www.python.org/downloads 重新下载并安装
+3. **安装时务必勾选 "Add Python to PATH"**
+4. 重启计算机
+
+**错误现象 2：网络连接问题**
+
+如果安装速度很慢或显示网络错误，可以尝试：
+
+方案1：使用国内镜像源
 ```bash
 pip install -i https://pypi.tuna.tsinghua.edu.cn/simple numpy pandas matplotlib scikit-learn
 ```
 
-**常见问题：**
+方案2：使用 uv（uv 通常自动处理网络问题，且更快）
+```bash
+uv pip install numpy pandas matplotlib scikit-learn
+```
 
-- 如果提示 `pip 命令找不到`，尝试：`python -m pip install numpy pandas matplotlib scikit-learn`
-- Mac 用户可能需要使用 `pip3` 而不是 `pip`
+## 安装验证
 
-## 变量与基本运算
+在终端/命令行运行以下命令来快速验证你的环境。遇到错误先读提示再求助助教。
 
-**什么是变量？** 变量就像是一个"盒子"，用来存储数据。给这个盒子起个名字，就可以随时使用里面的数据。
+**验证 Python 和 pip：**
 
-**Python 中的变量特点：**
+```bash
+python --version
+pip --version
+```
 
-- 不需要提前声明类型（Python 会自动识别）
-- 变量名要清晰易懂（比如 `age` 而不是 `a`）
-- 可以随时修改值
+如果两个命令都正常显示版本号，说明 Python 和 pip 已正确安装！
 
-下面我们看看具体例子：
+**验证库安装：**
+
+运行以下 Python 代码来检查必要的库是否已安装：
 
 ```{python}
 #| message: false
 #| warning: false
-# 1. 变量赋值：创建变量并存储数据
-age = 20          # 整数（int）：存储年龄
-price = 50.5      # 浮点数（float）：存储价格，带小数
-name = "Alice"    # 字符串（str）：存储文本，需要用引号
+# 验证库安装情况
+libs = ['numpy', 'pandas', 'matplotlib', 'sklearn']
 
-# 2. 打印变量：查看变量的值
-print(age)
-print(price)
-print(name)
+print("正在验证库安装...\n")
+all_success = True
+for lib in libs:
+    try:
+        __import__(lib)
+        print(f'✓ {lib} - 已安装')
+    except ImportError:
+        print(f'✗ {lib} - 未安装')
+        all_success = False
 
-# 3. 基本运算：使用变量进行计算
-area = 100              # 房屋面积（平米）
-price_per_sqm = 5000   # 每平米价格（元）
-total_price = area * price_per_sqm  # 计算总价
-print("总价:", total_price)
-
-# 4. 查看变量类型：了解变量存储的是什么类型的数据
-print(type(age))       # <class 'int'> - 整数类型
-print(type(price))     # <class 'float'> - 浮点数类型
-print(type(name))      # <class 'str'> - 字符串类型
+if not all_success:
+    print("\n如有库未安装，运行以下命令之一：")
+    print("  pip install numpy pandas matplotlib scikit-learn")
+    print("  # 或者使用 uv (更快):")
+    print("  uv pip install numpy pandas matplotlib scikit-learn")
+else:
+    print("\n✓ 所有库已安装！环境配置完成 🎉")
 ```
-
-**练习题：** 创建变量 `house_area = 120` 与 `price_per_sqm = 8000`，计算总价并打印。
-
-**提示：** 参考上面的代码，创建两个变量，然后用乘法计算总价。
-
-## 列表
-
-**什么是列表？** 列表就像是一个"容器"，可以存储多个数据。列表中的元素有顺序，可以用位置（索引）来访问。
-
-**列表的特点：**
-
-- 用方括号 `[]` 创建
-- 元素之间用逗号分隔
-- 索引从 0 开始（第一个元素是 `[0]`，第二个是 `[1]`）
-- 可以用 `-1` 访问最后一个元素
-- 可以随时添加、删除元素
-
-下面我们学习列表的基本操作：
-
-```{python}
-#| message: false
-#| warning: false
-# 1. 创建列表：存储多个房价数据
-house_prices = [100, 150, 200, 250, 300]
-
-# 2. 访问列表元素：使用索引（位置）
-print(house_prices[0])    # 第一个元素：100（索引从0开始）
-print(house_prices[-1])  # 最后一个元素：300（-1表示倒数第一个）
-
-# 3. 获取列表长度：查看列表中有多少个元素
-print(len(house_prices))  # 输出：5
-
-# 4. 添加元素：在列表末尾添加新数据
-house_prices.append(350)  # 添加350到列表末尾
-print(house_prices)        # 输出：[100, 150, 200, 250, 300, 350]
-
-# 5. 遍历列表：依次访问列表中的每个元素
-# for 循环：对列表中的每个元素执行相同操作
-for p in house_prices:
-    print(p)  # 依次打印每个房价
-```
-
-**练习题：** 创建一个包含 5 个学生成绩的列表，打印第一个和最后一个成绩。
-
-**提示：**
-
-- 使用方括号创建列表，例如：`[85, 90, 78, 92, 88]`
-- 使用 `[0]` 访问第一个元素，`[-1]` 访问最后一个元素
-
-## 导入库与函数调用
-
-**什么是库？** 库（Library）就像是一个"工具箱"，里面装满了别人已经写好的实用工具（函数）。我们不需要自己写代码实现所有功能，直接使用库里的工具就可以了。
-
-**为什么要用库？**
-
-- 节省时间：不需要重复造轮子
-- 功能强大：专业库经过优化，性能更好
-- 标准化：大家都在用，代码更容易理解
-
-**Python 常用库：**
-
-- `numpy`：数值计算（数组、矩阵运算）
-- `pandas`：数据处理（表格数据操作）
-- `matplotlib`：画图（数据可视化）
-- `sklearn`：机器学习（后续会学）
-
-下面看看如何使用库：
-
-```{python}
-#| message: false
-#| warning: false
-# 导入库：使用时需要加库名
-import numpy as np       # 导入 numpy 库，通常缩写为 np
-import pandas as pd      # 导入 pandas 库，通常缩写为 pd
-
-# numpy 示例：数值计算和数组操作
-# 注意：numpy数组 vs Python列表的区别
-# - 列表：Python内置，灵活但计算慢
-# - 数组：numpy专用，高效但类型固定
-scores_list = [85, 90, 78, 92, 88]        # Python 列表
-scores = np.array(scores_list)             # 转换为 numpy 数组
-print("原始列表:", scores_list)
-print("numpy数组:", scores)
-print("平均分:", np.mean(scores))         # numpy 计算平均值，输出：86.6
-print("最高分:", np.max(scores))          # 最高分，输出：92
-print("最低分:", np.min(scores))          # 最低分，输出：78
-
-# pandas 示例：表格数据处理
-# 创建一个学生成绩表
-data = {
-    '姓名': ['小明', '小红', '小刚', '小丽'],
-    '成绩': [85, 90, 78, 92]
-}
-df = pd.DataFrame(data)  # 创建 DataFrame（数据表格）
-print("\n学生成绩表:")
-print(df)               # 显示表格
-print("\n平均成绩:", df['成绩'].mean())  # pandas 计算平均值
-```
-
-**练习题：** 使用 numpy 和 pandas 创建一个简单的学生成绩管理系统。
-
-**要求：**
-
-1. 使用 numpy 创建一个包含 5 个学生成绩的数组：`[85, 92, 78, 96, 88]`
-2. 计算这些成绩的平均值、最高分和最低分
-3. 使用 pandas 创建一个 DataFrame，包含学生的姓名和成绩
-4. 显示 DataFrame 并计算平均成绩
-
-**提示：**
-
-- numpy 数组创建：`np.array([数值列表])`
-- numpy 统计函数：`np.mean()`, `np.max()`, `np.min()`
-- pandas DataFrame 创建：`pd.DataFrame({'列名': [数据]})`
-- DataFrame 平均值：`df['列名'].mean()`
 
 ## 第一个机器学习程序：线性回归
 
@@ -381,21 +312,4 @@ plt.show()    # 显示图形
 
 **恭喜！** 你已经完成了第一个机器学习程序！🎉
 
-**理解要点：**
 
-- **训练（fit）**：模型从8个历史数据中学习规律，找到最佳拟合直线
-- **预测（predict）**：用学到的规律预测新数据
-- **可视化**：图形帮助我们直观地看到模型的效果
-
-**常见问题：**
-
-- **Q：为什么 X 要写成 `[[area] for area in areas]`？**
-  - A：sklearn 要求特征必须是二维数组（每行是一个样本），即使只有一个特征也要写成二维格式。后续课程会详细讲解。
-
-- **Q：如果数据不是完美直线会怎样？**
-  - A：模型会找到一条"最接近"所有数据点的直线，即使数据不完全在一条直线上。这是线性回归的核心思想：找到最佳拟合。
-
-**互动练习：**
-
-- 尝试修改 `new_area = [[95]]` 为其他面积（如 `[[80]]` 或 `[[120]]`），看看预测结果
-- 尝试在 `areas` 和 `prices` 中添加新的数据点，观察模型如何变化
