--- a/w0_syllabus.qmd
+++ b/w0_syllabus.qmd
@@ -13,7 +13,7 @@ title: 课程安排与考核要求
 
 ## 教学周次安排
 
-### **W10｜Python 基础 + 回归问题入门**
+### **W10｜机器学习入门与Python基础**
 
 **理论部分**
 
@@ -23,8 +23,7 @@ title: 课程安排与考核要求
 
 **上机部分**
 
-* 安装 Python 3.10 + VS Code + Jupyter Notebook
-* Python 速成：变量、列表、函数调用
+* 安装 Python 3.10 + VS Code + 安装库
 * 运行第一个机器学习程序（线性回归）
 
 ### **W11｜数据处理与线性回归实践**
