--- a/w1_practice.qmd
+++ b/w1_practice.qmd
@@ -37,7 +37,7 @@ plt.rcParams['axes.unicode_minus'] = False
 **推荐方式：使用 Python 官方安装包（简单可靠）**
 
 1. **下载地址**：https://www.python.org/downloads
-2. **选择版本**：建议选择最新稳定版本（3.11 或 3.12）
+2. **选择版本**：建议选择最新稳定版本（3.10、3.11 或 3.12）
 3. **安装步骤**：
    - 下载适合你操作系统的安装程序
    - 运行安装程序，**务必勾选 "Add Python to PATH"** ⚠️（这很重要！）
